SERVER-60588 Don't attempt to coerce a double product to long

(cherry picked from commit d0a023d1cba8782c761890c20752ecf494d22a62)
(cherry picked from commit f6c05d4d028fe6712e81396be335fd144124c561)
(cherry picked from commit 9aa24cb9aaa12578a81361e64a5e57dbe1c34b1e)
(cherry picked from commit 4ea0988ab20a69369b8a8ceaf5015c94f253a289)