src/mongo/db/pipeline/expression.cpp
@@ -2701,11 +2701,17 @@ Value ExpressionMultiply::evaluate(const Document& root, Variables* variables) c
                 decimalProduct = decimalProduct.multiply(val.coerceToDecimal());
             } else {
                 doubleProduct *= val.coerceToDouble();
-                if (!std::isfinite(val.coerceToDouble()) ||
-                    mongoSignedMultiplyOverflow64(longProduct, val.coerceToLong(), &longProduct)) {
-                    // The number is either Infinity or NaN, or the 'longProduct' would have
-                    // overflowed, so we're abandoning it.
-                    productType = NumberDouble;
+
+                if (productType != NumberDouble) {
+                    // If `productType` is not a double, it must be one of the integer types, so we
+                    // attempt to update `longProduct`.
+                    if (!std::isfinite(val.coerceToDouble()) ||
+                        mongoSignedMultiplyOverflow64(
+                            longProduct, val.coerceToLong(), &longProduct)) {
+                        // The number is either Infinity or NaN, or the 'longProduct' would have
+                        // overflowed, so we're abandoning it.
+                        productType = NumberDouble;
+                    }
                 }
             }
         } else if (val.nullish()) {
